<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="menu_settings">Settings</string>
    <string name="outputX">test</string>
    <string name="outputY">test</string>
    <string name="outputZ">test</string>
    <string name="outputX2">test</string>
    <string name="outputY2">test</string>
    <string name="outputZ2">test</string>

</resources>